Updated the default basic_mosaic tuning values in config.ini to be more “large-project friendly”:
Set mosaic_auto_worker_max = 36 (caps auto worker count to avoid oversubscription on big machines)
Set mosaic_extract_chunk_size = 1000 (better load balancing; fewer “straggler tail” stalls)
Set mosaic_task_order = heavy_first (prevents the worst chunks being left for the end)
Set mosaic_extract_maxtasksperchild = 20 (reduces Windows spawn/respawn overhead vs 4)

These should be low-impact for small projects, but usually help a lot on very large/complex asset sets.

--- a/config.ini
+++ b/config.ini
@@ -73,7 +73,7 @@ mosaic_auto_worker_fraction     = 0.75
 # - min: minimum workers when auto-sizing
 mosaic_auto_worker_min          = 1
 # - max: 0 means no explicit upper bound (still capped by RAM); otherwise cap workers
-mosaic_auto_worker_max          = 0
+mosaic_auto_worker_max          = 36
 # - mem_gb: approximate GB per worker used for RAM-based capping
 mosaic_auto_worker_mem_gb       = 1.5
 
@@ -85,13 +85,13 @@ mosaic_parallel_extract         = true
 # Chunk size for parallel boundary extraction.
 # - Larger: less overhead, but worse load balancing (can create a slow tail)
 # - Smaller: better load balancing, but more overhead
-mosaic_extract_chunk_size       = 2500
+mosaic_extract_chunk_size       = 1000
 
 # Task ordering for parallel chunks (reduces end-of-run stalls).
 # - interleave: mix light/heavy chunks for steadier progress (default)
 # - heavy_first: run heaviest chunks first
 # - light_first: run lightest chunks first
-mosaic_task_order               = interleave
+mosaic_task_order               = heavy_first
 
 # Pool dispatch chunk size for imap_unordered (NOT the same as mosaic_extract_chunk_size).
 # - 1: most responsive/steady (default)
@@ -101,7 +101,7 @@ mosaic_extract_pool_chunksize   = 1
 # Restart each worker after N tasks (limits memory growth; too small adds overhead).
 # - 0/empty is not allowed; use >= 1
 # - Typical: 10–50 on Windows for large projects
-mosaic_extract_maxtasksperchild = 4
+mosaic_extract_maxtasksperchild = 20
 
 # Advanced (leave defaults unless tuning)
 # Batch sizes for union reduction stages.
