Adjusted commit date and default index values.

--- a/config.ini
+++ b/config.ini
@@ -9,9 +9,10 @@ input_folder_atlas              = input/atlas
 input_folder_evaluate_landuse   = input/evaluate_landuse
 input_folder_images             = input/images
 output_folder                   = output/
-gpkg_file = output/mesa.gpkg
+gpkg_file                       = output/mesa.gpkg
+mosaic_coverage_union           = true
 
-mesa_version                    = 5.0 beta 2025-12-26
+mesa_version                    = 5.0 beta 2026-01-13
 # Themes: cosmo, flatly, journal, litera, lumen, minty, pulse,
 # sandstone, united, yeti, morph, simplex, cerculan, solar, superhero, darkly, cyborg, vapor
 ttk_bootstrap_theme             = litera
@@ -197,5 +198,5 @@ category_colour                 = #ffffb2
 [VALID_VALUES]
 valid_input                     = 1,2,3,4,5
 category_colour_unknown         = #BDBDBD
-index_importance_weights = 1,3,5,7,10
-index_sensitivity_weights = 1,3,4,5,6,7,8,26,30,50,70,80,90,100
+index_importance_weights = 1,2,5,5,10
+index_sensitivity_weights = 10,10,10,10,10,10,10,10,10,10,10,10,10,10
