--- a/requirements_all_win311.txt
+++ b/requirements_all_win311.txt
@@ -7,11 +7,13 @@ appdirs==1.4.4
 attrs==23.1.0
 auto-py-to-exe==2.42.0
 autopep8==2.0.4
+autocommand==2.2.2
 Babel==2.14.0
 beautifulsoup4==4.12.2
 bottle==0.12.25
 bottle-websocket==0.2.9
 bs4==0.0.1
+backports.tarfile==1.2.0
 cbor2==5.6.2
 certifi==2023.11.17
 cffi==1.16.0
@@ -59,6 +61,9 @@ influxdb-client==1.41.0
 influxdb3-python==0.3.6
 Jinja2==3.1.2
 joblib==1.3.2
+jaraco.context==6.1.0
+jaraco.functools==4.4.0
+jaraco.text==4.0.0
 kiwisolver==1.4.5
 lief==0.13.2
 llvmlite==0.41.1
@@ -70,6 +75,7 @@ mercantile==1.2.1
 moviepy==1.0.3
 msgpack==1.0.7
 multidict==6.0.5
+more-itertools==10.8.0
 networkx==3.2.1
 nltk==3.8.1
 Nuitka==1.9.4
@@ -160,3 +166,4 @@ zipp==3.17.0
 zope.event==5.0
 zope.interface==6.1
 zstandard==0.22.0
+platformdirs==4.5.1
