chore(devtools): move build and capture tooling out of code/
Create a dedicated devtools area for build/screenshot utilities and retire legacy tooling locations under code/.

Changes included:

- Add devtools/build_all.py and devtools/compile_win_11.bat as canonical build entrypoints.

- Add devtools/capture_ui_active_batch.py and devtools/screenshot_active_window.py for UI capture workflows.

- Remove code/build_all.py, code/compile_win_11.bat, and obsolete code/style_query.txt.

- Update requirements_compile_win311.txt comments to reference the new devtools paths.

Rationale:

- Separates developer/maintenance tooling from runtime helper scripts.

- Clarifies where full-build and screenshot automation should be maintained.

--- a/requirements_compile_win311.txt
+++ b/requirements_compile_win311.txt
@@ -1,5 +1,5 @@
 # Minimal-ish MESA dev+compile environment for Windows + Python 3.11
-# Focus: run scripts + build executables via PyInstaller (build_all.py / compile_win_11.bat)
+# Focus: run scripts + build executables via PyInstaller (devtools/build_all.py / devtools/compile_win_11.bat)
 # If you need every optional tool/package, use requirements_all_win311.txt instead.
 
 # Build toolchain
